--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "tailwind:css": "postcss public/assets/css/tailwind.css -o public/assets/css/style.css",
+    "dev": "nodemon -e js,ejs index.js",
     "migrate": "node migrate.js",
     "start": "node index.js",
     "lint": "echo '----- Checking Backend...' && npx prettier --debug-check . && eslint --ext .js . && echo '----- Done!'",
@@ -18,7 +19,9 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.8",
     "express": "^4.17.2",
-    "mysql2": "^2.3.3"
+    "express-ejs-layouts": "^2.5.1",
+    "mysql2": "^2.3.3",
+    "reload": "^3.2.0"
   },
   "rules": {
     "no-console": [
@@ -32,12 +35,16 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.11",
     "eslint": "^8.11.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
-    "prettier": "2.5.1"
+    "postcss": "^8.4.16",
+    "postcss-cli": "^10.0.0",
+    "prettier": "2.5.1",
+    "tailwindcss": "^3.1.8"
   }
 }
