--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon -e js,ejs index.js",
     "migrate": "node migrate.js",
     "start": "node index.js",
     "lint": "echo '----- Checking Backend...' && npx prettier --debug-check . && eslint --ext .js . && echo '----- Done!'",
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.8",
     "express": "^4.17.2",
+    "express-ejs-layouts": "^2.5.1",
     "mysql2": "^2.3.3"
   },
   "rules": {
