--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "sync": "browser-sync start --proxy localhost:5500 --files 'src/views'",
     "dev": "nodemon -e js,ejs index.js",
+    "dev-sync": "concurrently --kill-others \"npm run dev\" \"npm run sync\"",
     "migrate": "node migrate.js",
     "start": "node index.js",
     "lint": "echo '----- Checking Backend...' && npx prettier --debug-check . && eslint --ext .js . && echo '----- Done!'",
@@ -33,6 +35,8 @@
     ]
   },
   "devDependencies": {
+    "browser-sync": "^2.27.10",
+    "concurrently": "^7.4.0",
     "eslint": "^8.11.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
